# customercare_project_phase1

./: .env.example  Makefile  README.md  docker-compose.ops.yml  docker-compose.yml  ingestion_test_v2.py
backend/: Dockerfile  README.md  pyproject.toml  trigger_ingest.py
backend/app/: main.py
backend/app/api/v1/: admin.py  chat.py  database.py  eval.py  ingest.py  observability.py
backend/app/core/: __init__.py  config.py
backend/app/services/chunking/: semantic.py
backend/app/services/generation/: embeddings.py  rag_generation.py
backend/app/services/ingestion/: docling_processor.py  orchestrator.py  scrapers.py
backend/app/services/ingestion/loaders/: s3.py
backend/app/services/retrieval/vector_store/: milvus.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: ingestion_tasks.py
evaluation/datasets/: golden_set.json
evaluation/runners/: ragas_runner.py
gateway/: nginx.conf
infrastructure/argocd/: application.yaml
infrastructure/docker/: Dockerfile.backend
infrastructure/terraform/: main.tf
init_data/milvus/: schema_logs.json  schema_policy.json
init_data/neo4j/: constraints.cypher
init_data/postgres/: 01_schema.sql  02_seed_tenants.sql
init_data/prompts/: system_prompts.yaml
observability/prometheus/: prometheus.yml
open-webui/: config.json
open-webui/pipelines/: rag_pipeline.py
resources/: logging.yaml  models.yaml  prompts.yaml  tenants.yaml
resources/source_docs/: provider-info.html  (+2 more)
scripts/: backfill_embeddings.py  cache_warmup.py  data_quality_checks.py  purge_stale_vectors.py  reindex_documents.py
(+3 files in other folders)
